test/functions/diten/unresolvedCallBigParamString.good
unresolvedCallBigParamString.chpl:7: error: unresolved call 'foo("1234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890")'
unresolvedCallBigParamString.chpl:1: note: this candidate did not match: foo(i: int)
unresolvedCallBigParamString.chpl:7: note: because call actual argument #1 with type string
unresolvedCallBigParamString.chpl:1: note: is passed to formal 'i: int(64)'
